Prevent horizontal scrollbar [ci skip]

--- a/css/style.scss
+++ b/css/style.scss
@@ -265,7 +265,7 @@
   @extend .page-section;
   padding-left: 0.7em;
   padding-bottom: 0.7em;
-  width: 97%;
+  width: 94%;
 
   h2 {
     position: relative;
